crates/keron-lang/tests/corpus/errors/parse/single_line_string_raw_newline.snap
---
source: crates/keron-lang/tests/harness/mod.rs
assertion_line: 75
---
error: unexpected `"`, expected expression
  --> 1:11
  |
1 | val bad = "hello
  |           ^
